Made changes to AdminFragment2 in order to solve issues with R2.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,11 @@
     <string name="admin_addButton">Προσθήκη</string>
     <string name="admin_viewUserData">Προβολή στοιχείων χρήστη</string>
 
+    <string name="name_service">Όνομα παροχής</string>
+    <string name="code_service">Κωδικός παροχής</string>
+    <string name="cost_service">Κόστος ανα συνεδρία</string>
+    <string name="description_service">Περιγραφή παροχής</string>
+
 
     <string name="physician_name">Όνομα</string>
     <string name="physician_lastName">Επώνυμο</string>
