--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="signIn">Είσοδος</string>
     <string name="welcome_message">Καλώς ορίσατε,</string>
 
-
     <string name="admin_user">Χρήστης ΠΣΦ</string>
     <string name="admin_namePhysio">Όνομα Φυσιοθεραπευτηρίου</string>
     <string name="admin_ssnPhysio">ΑΦΜ Φυσιοθεραπευτηρίου</string>
@@ -24,7 +23,7 @@
     <string name="admin_serviceCost">Κόστος ανα συνεδρία</string>
     <string name="admin_serviceDescription">Περιγραφή παροχής</string>
 
-
+    <string name="physician_user">Όνομα</string>
     <string name="physician_name">Όνομα</string>
     <string name="physician_lastName">Επώνυμο</string>
     <string name="physician_AMKA">ΑΜΚΑ</string>
