Added PhysicianR8Activity and made other additional smaller changes and fixes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,6 @@
     <string name="physician_appointment_history">Προηγούμενες επισκέψεις</string>
     <string name="physician_edit">Επεξεργασία</string>
 
-
     <string name="menu_main_1admin">Χρήστης ΠΣΦ</string>
     <string name="menu_main_2physician">Φυσιοθεραπευτήριο</string>
     <string name="menu_main_3patient">Ασθενής</string>
@@ -41,4 +40,5 @@
     <string name="menu_physician_3patients">Ασθενείς</string>
     <string name="menu_user_1home">Αρχική</string>
     <string name="menu_user_2financialHistory">Κινήσεις</string>
+    <string name="select">Ενέργειες επίσκεψης</string>
 </resources>
