--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="menu_user_1home">Αρχική</string>
     <string name="menu_user_2financialHistory">Κινήσεις</string>
     <string name="select">Ενέργειες επίσκεψης</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
