--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
 
     <string name="user_welcome_message">Καλώς ορίσατε,</string>
     <string name="user_name">Όνομα ασθενή</string>
+    <string name="appointmentLog">Προηγούμενες επισκέψεις</string>
 </resources>
