--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="user_welcome_message">Καλώς ορίσατε,</string>
     <string name="user_name">Όνομα ασθενή</string>
     <string name="appointmentLog">Προηγούμενες επισκέψεις</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
