Fixed bugs that were introduced with commits 4b8fcf8 and d141d2a.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AIC601project</string>
+    <string name="app_name">myTherapy</string>
     <string name="company_name">myTherapy</string>
 
     <string name="login">Σύνδεση</string>
