--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,14 @@
     <string name="appointmentLog">Προηγούμενες επισκέψεις</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="patient_name">Όνομα Ασθενή</string>
+    <string name="patient_surname">Επώνυμο Ασθενή</string>
+    <string name="patient_amka">ΑΜΚΑ Ασθενή</string>
+    <string name="patient_street">Οδός</string>
+    <string name="patient_streetno">Αριθμός</string>
+    <string name="patient_city">Πόλη</string>
+    <string name="patient_zip">Τ.Κ.</string>
+    <string name="patient_addButton">Προσθήκη</string>
 </resources>
